--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     implementation 'com.jayway.jsonpath:json-path:2.6.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.1'
 }
 
 
